cabal-version:       3.0
name:                monocle
version:             0.1.3.0
homepage:            https://github.com/change-metrics/monocle#readme
bug-reports:         https://github.com/change-metrics/monocle/issues
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Monocle authors
maintainer:          Monocle authors <fboucher@redhat.com>
copyright:           2021 Monocle authors
category:            Development
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.10.7
extra-source-files:  dhall-monocle/Monocle/**/*.dhall,
                     github-schema/schema.docs.graphql,
                     gitlab-schema/schema.graphql,
                     test/data/*.yaml,
                     test/data/*.json

source-repository head
  type:                git
  location:            https://github.com/change-metrics/monocle.git

flag ci
  description: Make warnings error
  default:     False
  manual:      True

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wno-missing-pattern-synonym-signatures
                       --write-ghc-environment-files=always
                       -- Enable stan integration
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if flag(ci)
    ghc-options:       -Werror

  default-language:    Haskell2010
  default-extensions:  BangPatterns,
                       -- ConstraintKinds enables defining aliases for constraints, e.g. `type MyE m = (MonadLog m, MonadTime m)`
                       ConstraintKinds,
                       DeriveGeneric,
                       DerivingStrategies,
                       -- FlexibleInstances enables defining instances for types such as Pico (which is defined as `Fixed Data.Fixed.E12` in Data.Fixed. It is safe to use.
                       FlexibleInstances,
                       FlexibleContexts,
                       GeneralizedNewtypeDeriving,
                       -- KindSignatures, DataKinds and PolyKinds enables using `:::` to annotate a type a type with a name.
                       KindSignatures,
                       DataKinds,
                       PolyKinds,
                       LambdaCase,
                       MultiWayIf,
                       NamedFieldPuns,
                       NamedWildCards,
                       NoImplicitPrelude,
                       NumDecimals,
                       NumericUnderscores,
                       -- MultiParamTypeClasses enables declaring instances with multiple type params, e.g. this is required to define custom MonadReader or From instance.
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       QuasiQuotes,
                       PatternSynonyms,
                       RecordWildCards,
                       ScopedTypeVariables,
                       StrictData,
                       TypeApplications,
                       TypeOperators

common codegen
  default-language:    Haskell2010
  hs-source-dirs:      codegen
  build-depends:       base                       < 5
                     , aeson
                     , bytestring
                     , containers                 >= 0.6
                     , deepseq                    >= 1.4
                     , proto3-suite               >= 0.4.2
                     , proto3-wire                >= 1.2.0
                     , text
                     , vector                     >= 0.12

library
  import:              common-options, codegen
  build-depends:       base                       < 5
                     , MonadRandom
                     , aeson
                     , aeson-casing
                     , aeson-pretty
                     , attoparsec                 >= 0.13
                     , base64-bytestring          >= 1.1
                     , binary                     >= 0.8
                     , bloodhound                 >= 0.18.0.0
                     , bugzilla-redhat            >= 0.3.2
                     , byteslice                  >= 0.2
                     , bytestring                 >= 0.10
                     , connection
                     , containers                 >= 0.6
                     , dhall                      >= 1.39
                     , dhall-yaml                 >= 1.2
                     , directory
                     , either                     >= 5
                     , envparse                   >= 0.4
                     , exceptions                 >= 0.10
                     , fakedata                   >= 1.0
                     , fast-logger
                     , foldl
                     , gerrit                     >= 0.1.4
                     , gitrev                     >= 1.3.1
                     , hashtables                 >= 1.2
                     , http-client                >= 0.6
                     , http-client-tls            >= 0.3
                     , http-mock                  >= 0.1
                     , http-types                 >=0.12
                     , json-syntax                >= 0.2
                     , lens
                     , megaparsec                 >= 9
                     , morpheus-graphql-client    ^>= 0.18
                     , mmorph
                     , mtl
                     , network                    >= 3
                     , network-uri                >= 2.5
                     , optparse-applicative
                     , parser-combinators         >= 1.2
                     , prometheus-client          >= 1.0
                     , prometheus-metrics-ghc     >= 1.0
                     , proto3-suite               >= 0.4.2
                     , qq-literals
                     , relude                     >= 1.0
                     , retry                      >= 0.8
                     , safe-exceptions            >= 0.1
                     , say                        >= 0.1
                     , servant                    >= 0.18.2
                     , servant-options            >= 0.1
                     , servant-server             >= 0.18.2
                     , streaming                  >= 0.2
                     , tasty                      >= 1.4
                     , tasty-hunit                >= 0.10
                     , template-haskell
                     , text-short                 >= 0.1
                     , text-time                  >= 0.3
                     , th-env                     >= 0.1
                     , time
                     , transformers
                     , unliftio-core
                     , unliftio
                     , vector                     >= 0.12
                     , wai                        >= 3.2.3
                     , wai-cors                   >= 0.2
                     , wai-logger                 >= 2.3
                     , wai-middleware-prometheus  >= 1.0
                     , warp                       >= 3.3.15
                     , witch                      >= 0.3
  hs-source-dirs:      src
  exposed-modules:     Monocle.Prelude
                     , Monocle.Env
                     , Monocle.Class
                     , Monocle.Version
                     , CLI

                     -- monocle api
                     , Monocle.Api
                     , Monocle.Api.Config
                     , Monocle.Api.Server
                     , Monocle.Api.Test

                     -- api client for lentille
                     , Monocle.Client
                     , Monocle.Client.Api

                     -- servant
                     , Monocle.Servant.HTTP
                     , Monocle.Servant.PBJSON

                     -- bloodhound
                     , Monocle.Backend.Documents
                     , Monocle.Backend.Index
                     , Monocle.Backend.Queries
                     , Monocle.Backend.Test
                     , Monocle.Backend.Provisioner
                     , Monocle.Backend.Janitor
                     , Monocle.Test.Spec

                     -- megaparsec search language
                     , Monocle.Search.Lexer
                     , Monocle.Search.Parser
                     , Monocle.Search.Query
                     , Monocle.Search.Syntax

                     -- Lentille
                     , Lentille
                     , Lentille.GraphQL
                     , Lentille.Bugzilla

                     , Lentille.GitHub.Favorites
                     , Lentille.GitHub.Issues
                     , Lentille.GitHub.RateLimit
                     , Lentille.GitHub.Organization

                     , Lentille.GitLab.MergeRequests
                     , Lentille.GitLab.Group
                     , Lentille.GitLab.Adapter

                     , Lentille.Gerrit

                     , Macroscope.Main
                     , Macroscope.Worker
                     , Macroscope.Test

                     -- Fast json helpers
                     , Json.Extras

                     -- Codegen
                     , Monocle.Change
                     , Monocle.Config
                     , Monocle.Search
                     , Monocle.Crawler
                     , Monocle.Metric
                     , Monocle.UserGroup
                     , Monocle.Project
                     , Monocle.Login

  other-modules:       Database.Bloodhound.Raw
                     , Lentille.BugzillaMock
                     , Lentille.Bugzilla.Spec
                     , Paths_monocle

  autogen-modules:     Paths_monocle

executable monocle
  import:              common-options
  hs-source-dirs:      app
  build-depends:       base, monocle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  main-is:             Monocle.hs

benchmark json-decode
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  build-depends:       base, aeson, bloodhound, byteslice, bytestring, criterion, json-syntax, monocle, text-short, text-time, fakedata, random
  main-is:             JsonDecode.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite monocle-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, monocle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
