cabal-version:       2.4
name:                lentille-github-query
version:             0.1.0.0
build-type:          Simple
tested-with:         GHC == 8.10.4

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  build-depends:     , base                       < 5
                     , relude                     > 1.0 && < 1.1
                     , aeson                      < 1.6
                     , streaming                  < 0.3
                     , http-client                < 0.8
                     , http-client-tls            < 0.4
                     , time                       < 1.12
                     , morpheus-graphql-client    ^>= 0.17
  exposed-modules:     Lentille.GitHub
                     , Lentille.GitHub.Favorites
