cabal-version:       2.4
name:                lentille-gitlab
version:             0.1.0.0
build-type:          Simple
tested-with:         GHC == 8.10.4
extra-source-files:  ./gitlab-schema/schema.graphql

source-repository head
  type:                git
  location:            https://github.com/change-metrics/lentille.git

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  build-depends:       base                       < 5
                     , relude                     > 1.0 && < 1.1
                     , aeson                      < 1.6
                     , monocle
                     , streaming                  < 0.3
                     , http-client                < 0.8
                     , proto3-suite               >= 0.4.2
                     , http-client-tls            < 0.4
                     , time                       < 1.12
                     , vector
                     , morpheus-graphql-client    ^>= 0.17
                     , network-uri                < 2.6.5
  exposed-modules:     Lentille.GitLab
                     , Lentille.GitLab.MergeRequests
                     , Lentille.GitLab.Adapter

executable lentille-gitlab
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
