cabal-version:       2.4
name:                lentille-mock
version:             0.1.0.0
build-type:          Simple

library
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  build-depends:       base                       < 5
                     , aeson                      < 1.6
                     , http-client                < 0.8
                     , http-mock                  < 0.2
                     , http-types                 < 0.13
                     , relude                     > 1.0 && < 1.1
                     , wai                        < 3.3
  hs-source-dirs:      src
  exposed-modules:     Lentille.MonocleMock
