cabal-version:       2.4
name:                lentille
version:             0.1.0.0
synopsis:            Monocle companion library
description:
    Lentille is a haskell library for Monocle.
    .
    Use this library to query and interact with Monocle API.
    .
homepage:            https://github.com/change-metrics/lentille#readme
bug-reports:         https://github.com/change-metrics/lentille/issues
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Monocle authors
maintainer:          Monocle authors <fboucher@redhat.com>
copyright:           2021 Monocle authors
category:            Development
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/change-metrics/lentille.git

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       aeson                      < 1.6
                     , aeson-casing               < 0.3
                     , exceptions                 < 0.11
                     , http-client                < 0.8
                     , http-client-tls            < 0.4
                     , relude                     > 1.0.0.0
                     , retry                      < 0.9
                     , streaming                  < 0.3
                     , time                       < 1.12
  hs-source-dirs:      src
  exposed-modules:     Lentille
                     , Lentille.Client
                     , Lentille.Worker

test-suite lentille-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base                       < 5
                     , lentille
                     , lentille-mock
                     , relude                     > 1.0 && < 1.1
                     , streaming                  < 0.3
                     , tasty                      < 1.5
                     , tasty-hunit                < 0.11
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
